# qt-wasm-github-page

./: .gitignore  README.md
.github/workflows/: deploy-wasm.yml
docker/: Dockerfile.wasm
qt_wasm_example/: CMakeLists.txt  qmlmodules  qt_wasm_example.qmlproject
qt_wasm_example/content/: App.qml  Screen01.ui.qml
qt_wasm_example/imports/: CMakeLists.txt
qt_wasm_example/imports/qt_wasm_example/: CMakeLists.txt  qmldir
qt_wasm_example/imports/qt_wasm_example/designer/: plugin.metainfo
qt_wasm_example/src/: import_qml_plugins.h
scripts/: build.sh
